deployment/authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: authentication
  name: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: authentication
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/kubernetes_network: "true"
        io.kompose.service: authentication
    spec:
      containers:
        - image: authentication
          name: authentication
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /usr/apps/authentication
              name: authentication-claim0
            - mountPath: /usr/apps/authentication/node_modules
              name: authentication-claim1
      restartPolicy: Always
      volumes:
        - name: authentication-claim0
          persistentVolumeClaim:
            claimName: authentication-claim0
        - name: authentication-claim1
          persistentVolumeClaim:
            claimName: authentication-claim1
status: {}
