deployment/mongodb-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb-service
  name: mongodb-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongodb-service
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/kubernetes_network: "true"
        io.kompose.service: mongodb-service
    spec:
      containers:
        - image: mongo:4.4.14-focal
          name: mongodb-service
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-service
            - mountPath: /data/configdb
              name: mongodb-service-config
      restartPolicy: Always
      volumes:
        - name: mongodb-service
          persistentVolumeClaim:
            claimName: mongodb-service
        - name: mongodb-service-config
          persistentVolumeClaim:
            claimName: mongodb-service-config
status: {}
