deployment/mongodb_service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mongodb-service
  name: mongodb_service
spec:
  ports:
    - name: "27016"
      port: 27016
      targetPort: 27017
  selector:
    io.kompose.service: mongodb-service
status:
  loadBalancer: {}
